--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -81,6 +82,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:text="重新设置时间" />
+
+
+        <ImageView
+            android:id="@+id/imageRank"
+            android:layout_width="72dp"
+            android:layout_height="74dp"
+            android:layout_marginTop="200dp"
+            android:src="@drawable/icon_bg_plant_bean_rank" />
+
+        <com.qwuiteam.project.view.OutlineTextView
+            android:id="@+id/imageView23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rank"
+            android:textStyle="bold"
+            android:includeFontPadding="false"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="215dp"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
     </FrameLayout>
 
