--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:text="BigDecimal" />
     <Button
-        android:id="@+id/format1"
+        android:id="@+id/start2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="json" />
