--- a/app/src/main/res/layout/fragment_seek_bar.xml
+++ b/app/src/main/res/layout/fragment_seek_bar.xml
@@ -11,6 +11,36 @@
         tools:background="@android:color/darker_gray">
 
 
+        <com.qwuiteam.project.view.Round4ConstraintLayout
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="138dp"
+            android:layout_marginEnd="18dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/update_progress_bar"
+                style="?android:progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:indeterminate="false"
+                android:max="100"
+                android:progress="20"
+                android:progressDrawable="@drawable/seekbar_progress_blue_drawable"
+                android:thumb="@null"
+                android:visibility="visible"
+                tools:progress="20" />
+
+        </com.qwuiteam.project.view.Round4ConstraintLayout>
+
+
+        <SeekBar
+            android:layout_marginTop="100dp"
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
         <FrameLayout
             android:id="@+id/layoutView"
             android:layout_width="match_parent"
