--- a/app/src/main/res/layout/fragment_file_store.xml
+++ b/app/src/main/res/layout/fragment_file_store.xml
@@ -15,14 +15,14 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/palindrome"
-                android:text="palindrome"
+                android:id="@+id/read"
+                android:text="read"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <Button
-                android:id="@+id/lcp"
-                android:text="longestCommonPrefix"
+                android:id="@+id/write"
+                android:text="write"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
