[feature_1.0.9.0] 1.diff rv
Signed-off-by: liuyuzhe <15313482685@163.com>

--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -58,5 +58,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/replaceSpace"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:text="replaceSpace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
