[feature_1.0.9.0] 1.recycler diff
Signed-off-by: liuyuzhe <15313482685@163.com>

--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -6,10 +6,18 @@
 
 
     <Button
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="number" />
+
+    <Button
         android:id="@+id/splitPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="splitPath" />
+
+
     <Button
         android:id="@+id/binaryString"
         android:layout_width="wrap_content"
