--- a/app/src/main/res/layout/fragment_pk.xml
+++ b/app/src/main/res/layout/fragment_pk.xml
@@ -15,6 +15,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp" />
 
+        <ImageView
+            android:id="@+id/image"
+            android:src="@drawable/icon_big"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
 
         <Button
             android:id="@+id/start"
