--- a/app/src/main/res/layout/fragment_default3.xml
+++ b/app/src/main/res/layout/fragment_default3.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#660F9FFF">
 
-    <com.qwuiteam.project.view.HRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
