--- a/app/src/main/res/layout/fragment_auto_text.xml
+++ b/app/src/main/res/layout/fragment_auto_text.xml
@@ -9,10 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widget" />
 
@@ -23,6 +20,13 @@
         android:layout_gravity="center_horizontal"
         android:focusable="true"
         android:scrollbars="vertical"
+        android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widget" />
+
+    <TextView
+        android:id="@+id/autoText3"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="200dp"
         android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widget" />
 
 
